@@ -1,20 +1,20 @@
 package chess.board;
 
-import static chess.board.Rank.getBlankRank;
+import static chess.board.Rank.createBlackPawnRank;
+import static chess.board.Rank.createBlankRank;
+import static chess.board.Rank.createWhitePawnRank;
 
-import chess.calculator.DefaultPointCalculateStrategy;
-import chess.calculator.PointCalculator;
-import chess.calculator.SameFilePawnPointCalculateStrategy;
 import chess.pieces.Piece;
 import chess.pieces.Piece.Color;
 import chess.pieces.Piece.Type;
+import chess.pieces.PieceFactory;
 import chess.pieces.Position;
 import chess.sorter.Direction;
 import chess.sorter.Sorter;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import utils.StringUtils;
 
 public class Board {
 
@@ -24,24 +24,9 @@ public class Board {
 
     private final List<Rank> ranks;
 
-    private int pieceCount;
-
-    private final PointCalculator pointCalculator;
-
-    private final List<Piece> blackPieces;
-
-    private final List<Piece> whitePieces;
-
     public Board() {
         this.ranks = new ArrayList<>(Collections.nCopies(RANK_COUNT, null));
-        pointCalculator = new PointCalculator(List.of(
-                new DefaultPointCalculateStrategy(),
-                new SameFilePawnPointCalculateStrategy()
-        ));
-        blackPieces = new ArrayList<>();
-        whitePieces = new ArrayList<>();
     }
-
 
     public Piece findPiece(Position position) {
         return getRank(position).findPiece(position.getFileNumber());
@@ -55,7 +40,7 @@ public class Board {
         return ranks.get(position.getRankNumber());
     }
 
-    private Rank getRank(int rankNum) {
+    public Rank getRank(int rankNum) {
         if (rankNum < 0 || rankNum >= RANK_COUNT) {
             throw new IllegalArgumentException();
         }
@@ -66,10 +51,6 @@ public class Board {
         return RANK_COUNT * FILE_COUNT;
     }
 
-    public int pieceCount() {
-        return pieceCount;
-    }
-
     public int pieceCount(Type type, Color color) {
         return ranks.stream()
                 .mapToInt(rank -> rank.count(type, color))
@@ -77,114 +58,76 @@ public class Board {
     }
 
     public void initialize() {
-        initializeRank(0, new Rank(FILE_COUNT, List.of(
-                Piece.createWhiteRook(),
-                Piece.createWhiteKnight(),
-                Piece.createWhiteBishop(),
-                Piece.createWhiteQueen(),
-                Piece.createWhiteKing(),
-                Piece.createWhiteBishop(),
-                Piece.createWhiteKnight(),
-                Piece.createWhiteRook()
-        )));
-        initializeRank(1, new Rank(FILE_COUNT, List.of(
-                Piece.createWhitePawn(),
-                Piece.createWhitePawn(),
-                Piece.createWhitePawn(),
-                Piece.createWhitePawn(),
-                Piece.createWhitePawn(),
-                Piece.createWhitePawn(),
-                Piece.createWhitePawn(),
-                Piece.createWhitePawn()
-        )));
-        initializeRank(2, getBlankRank(FILE_COUNT));
-        initializeRank(3, getBlankRank(FILE_COUNT));
-        initializeRank(4, getBlankRank(FILE_COUNT));
-        initializeRank(5, getBlankRank(FILE_COUNT));
-        initializeRank(6, new Rank(FILE_COUNT, List.of(
-                Piece.createBlackPawn(),
-                Piece.createBlackPawn(),
-                Piece.createBlackPawn(),
-                Piece.createBlackPawn(),
-                Piece.createBlackPawn(),
-                Piece.createBlackPawn(),
-                Piece.createBlackPawn(),
-                Piece.createBlackPawn()
-        )));
-        initializeRank(7, new Rank(FILE_COUNT, List.of(
-                Piece.createBlackRook(),
-                Piece.createBlackKnight(),
-                Piece.createBlackBishop(),
-                Piece.createBlackQueen(),
-                Piece.createBlackKing(),
-                Piece.createBlackBishop(),
-                Piece.createBlackKnight(),
-                Piece.createBlackRook()
-        )));
+        initializeRank(0, new Rank(FILE_COUNT, Arrays.asList(
+                PieceFactory.createWhiteRook(), PieceFactory.createWhiteKnight(), PieceFactory.createWhiteBishop(),
+                PieceFactory.createWhiteQueen(), PieceFactory.createWhiteKing(),
+                PieceFactory.createWhiteBishop(), PieceFactory.createWhiteKnight(), PieceFactory.createWhiteRook())));
+        initializeRank(1, createWhitePawnRank(FILE_COUNT));
+        initializeRank(2, createBlankRank(FILE_COUNT));
+        initializeRank(3, createBlankRank(FILE_COUNT));
+        initializeRank(4, createBlankRank(FILE_COUNT));
+        initializeRank(5, createBlankRank(FILE_COUNT));
+        initializeRank(6, createBlackPawnRank(FILE_COUNT));
+        initializeRank(7, new Rank(FILE_COUNT, Arrays.asList(
+                PieceFactory.createBlackRook(), PieceFactory.createBlackKnight(), PieceFactory.createBlackBishop(),
+                PieceFactory.createBlackQueen(), PieceFactory.createBlackKing(),
+                PieceFactory.createBlackBishop(), PieceFactory.createBlackKnight(), PieceFactory.createBlackRook())));
     }
-
 
     private void initializeRank(int rankNum, Rank rank) {
-        rank.getPieces()
-                .forEach(piece -> {
-                    if (!piece.isBlank()) {
-                        pieceCount += 1;
-                        addPieces(piece);
-                    }
-                });
-        ranks.set(rankNum, rank);
-    }
-
-    private void addPieces(Piece piece) {
-        if (piece.isBlack()) {
-            blackPieces.add(piece);
-        } else if (piece.isWhite()) {
-            whitePieces.add(piece);
+        if (rankNum >= RANK_COUNT) {
+            throw new IllegalArgumentException();
         }
+        ranks.set(rankNum, rank);
     }
 
 
     public void initializeEmpty() {
         for (int rankNum = 0; rankNum < RANK_COUNT; rankNum++) {
-            ranks.set(rankNum, getBlankRank(FILE_COUNT));
+            ranks.set(rankNum, createBlankRank(FILE_COUNT));
         }
     }
 
-    public void print() {
-        System.out.println(showBoard());
-    }
-
-    public String showBoard() {
-        StringBuilder sb = new StringBuilder();
-        for (int rankNum = RANK_COUNT - 1; rankNum >= 0; rankNum--) {
-            StringBuilder rank = StringUtils.appendNewLine(getRank(rankNum).show());
-            sb.append(rank);
+    public void move(Position source, Position target) {
+        if (source == target) {
+            throw new IllegalArgumentException();
         }
-        return sb.toString();
+        Piece current = findPiece(source);
+        List<Position> path = current.getPath(source, target);
+        verifySameTeamOnPath(path, current);
+        replacePiece(source, PieceFactory.createBlankPiece());
+        replacePiece(target, current);
     }
 
-    public void move(Position position, Piece piece) {
+    public void move(Position source, Piece piece) {
+        replacePiece(source, piece);
+    }
+
+    private void verifySameTeamOnPath(List<Position> path, Piece current) {
+        path.forEach(position -> {
+            Piece other = findPiece(position);
+            if (current.isSameTeam(other)) {
+                throw new IllegalArgumentException();
+            }
+        });
+    }
+
+    private void replacePiece(Position position, Piece piece) {
         Rank rank = getRank(position);
         rank.set(position.getFileNumber(), piece);
     }
 
-    public double calculatePoint(Color color) {
-        return pointCalculator.calculate(this, color);
-    }
 
     public List<Piece> sort(Color color, Sorter sorter, Direction direction) {
-        List<Piece> sorted;
-        if (direction.equals(Direction.ASC)) {
-            sorted = sorter.sortAsc(this, color);
-        } else {
-            sorted = sorter.sortDesc(this, color);
-        }
+        List<Piece> sorted = sorter.sort(getPieces(color), direction);
         return Collections.unmodifiableList(sorted);
     }
 
     public List<Piece> getPieces(Color color) {
-        List<Piece> pieces = color.equals(Color.WHITE) ? whitePieces : blackPieces;
-        return Collections.unmodifiableList(pieces);
+        return ranks.stream()
+                .map(rank -> rank.getPieces(color))
+                .flatMap(List::stream)
+                .toList();
     }
 
 }
